2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionTree.cs: Fix problem with insertbefore, which
	  was basically broken. Inherit NodeAttribute attributes.
	* Mono.Addins.Database/AddinScanResult.cs: Removed debug code.
	* Mono.Addins.Database/AddinDatabase.cs: When rebuilding the database,
	  don't try to delete folders when don't exist.

2007-05-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: Fixed several issues when
	  Enabling/Disabling add-ins.

2007-05-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/SetupProcess.cs,
	  Mono.Addins.Database/AddinDatabase.cs: If the scanner process
	  crashes for some reason, show a better error message and retry the
	  scan again.

2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/RuntimeAddin.cs: Added support for getting resource
	  string and resource objects. Patch by Georg Wächter.

2007-05-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinHostIndex.cs: Windows may sometimes change
	  the case of assemblies.

2007-05-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/RuntimeAddin.cs: Use the full add-in id when checking for
	  optional add-in dependencies.
	* Mono.Addins.Description/Extension.cs: Added method for getting a list
	  of node types allowed in an extension.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionNode.cs: Added some null checks.
	* Mono.Addins.Database/AddinScanner.cs: Add-in id is not mandatory.

2007-05-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.csproj: Added missing file.

2007-05-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Serialization/BinaryXmlReader.cs,
	  Mono.Addins.Description/NodeTypeAttribute.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/ExtensionNodeType.cs,
	  Mono.Addins.Description/ExtensionPoint.cs,
	  Mono.Addins.Description/ConditionTypeDescription.cs,